<resources>
    <string name="app_name">AngZuanWen</string>
    <string name="choose_your_entry_qualification">Choose Your Entry Qualification</string>
    <string name="spm">SPM</string>
    <string name="o_level">O Level</string>
    <string name="uec">UEC</string>
    <string name="malay_language">Malay Language</string>
    <string name="english_language">English Language</string>
    <string name="islamic_studies">Islamic Studies</string>
    <string name="moral_education">Moral Education</string>
    <string name="history">History</string>
    <string name="mathematics">Mathematics</string>
    <string name="science">Science</string>
    <string name="congrats">You are eligible to enroll - Diploma in Computer Science programme</string>
    <string name="sorry">You can consider - Diploma offered at the Perak, Johor, Pahang and Sabah branch</string>
    <string name="please_fill_in_your_result">Please fill in your result</string>
    <string name="check">Check</string>

    <string-array name="grades_array">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
    </string-array>
</resources>
